<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Calculadora Trigonométrica"
                android:textColor="@color/black"
                android:textSize="30sp" />
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/material_dynamic_neutral_variant70"
                android:paddingStart="10dp"
                android:gravity="center"
                android:text="@string/titulo1"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/grp_funciones"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdBSIN"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:onClick="calculadora"
                    android:text="@string/fn1"/>
                <RadioButton
                    android:id="@+id/rdBCOS"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:onClick="calculadora"
                    android:text="@string/fn2"/>
                <RadioButton
                    android:id="@+id/rdBTAN"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:onClick="calculadora"
                    android:text="@string/fn3"/>

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/material_dynamic_neutral_variant70"
                android:paddingStart="10dp"
                android:gravity="center"
                android:text="@string/titulo2"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/grp_grados"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rdB45"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="calculadora"
                    android:text="@string/gr1" />
                <RadioButton
                    android:id="@+id/rdB90"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:onClick="calculadora"
                    android:text="@string/gr2" />
                <RadioButton
                    android:id="@+id/rdB180"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:onClick="calculadora"
                    android:text="@string/gr3" />
            </RadioGroup>

            <ImageView
                android:id="@+id/imageAngulo"
                android:layout_width="match_parent"
                android:layout_marginTop="50dp"
                android:layout_height="240dp"
                android:layout_gravity="center"
                android:src="@drawable/_45"
                android:contentDescription="@string/angulos" />

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/titulo3"
                android:gravity="center"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_00"
                android:gravity="center"
                android:textSize="35sp" />

        </LinearLayout>
        </ScrollView>
</LinearLayout>